--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+appnope @ file:///opt/concourse/worker/volumes/live/5f13e5b3-5355-4541-5fc3-f08850c73cf9/volume/appnope_1606859448618/work
 attrs==21.2.0
 backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
 black==21.9b0
